--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+
+    //图片转base64
+    compile files('libs/sun.misc.BASE64Decoder.jar')
 }
