1，将收到的getTurbine消息写入本地文件； 2，getImage保存到图片文件； 3，更改文件结构。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
 
     //图片转base64
     compile files('libs/sun.misc.BASE64Decoder.jar')
+
+    //权限
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
 }
